WBNP-107 Ipad 2 navigation fix, navigation on mobile and tblet same by the latest design...

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -29,35 +29,37 @@ a {
     color: $main-color !important;
   }
 }
+
 a.nav-link {
   color: $dark-grey;
   &:hover {
     color: $main-color !important;
   }
 }
-
 .padded-content {
   @include default-spacing(15);
 }
+
 .footing-space {
   margin-bottom: 100px;
 }
+
 .full-height {
   height: 100%;
 }
 
 .desktop {
-  @media (max-width: 728px) {
+  @media (max-width: 1024px) {
     display: none !important;
   }
 }
 .mobile {
-  @media (min-width: 728px) {
+  @media (min-width: 1028px) {
     display: none !important;
   }
 }
 .desktop-filter{
-@media (min-width: 728px) {
+@media (min-width: 1024px) {
   display: block;
 }
 }
